--- a/index.html
+++ b/index.html
@@ -206,16 +206,16 @@
           <button class="slide-btn slide-btn-4"></button>
           <div class="slideshow-wrapper">
             <div class="slide">
-              <img src="images/phone1.jpg" />
+              <img src="images/slide-img-1.jpg" />
             </div>
             <div class="slide">
-              <img src="images/phone2.jpg" />
+              <img src="images/slide-img-2.jpg" />
             </div>
             <div class="slide">
-              <img src="images/kitchen.jpg" />
+              <img src="images/slide-img-3.jpg" />
             </div>
             <div class="slide">
-              <img src="images/water.jpg" />
+              <img src="images/slide-img-4.jpg" />
             </div>
           </div>
         </div>
