--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </li>
         <li class="social-icon-item">
           <a href="#" class="social-icon-link"
-            ><i class="fab fa-twitter-square social-icon"></i
+            ><i class="fab fa-whatsapp-square social-icon"></i
           ></a>
         </li>
         <li class="social-icon-item">
