--- a/index.html
+++ b/index.html
@@ -334,5 +334,6 @@
       <footer class="footer"></footer>
       <!-- end of footer -->
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
